Polish for composer testing with skeleton

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "pframework/p",
     "autoload": {
         "psr-0": {"P\\": "source/"},
-        "functions": ["source/P/functions.php"]
+        "files": ["source/P/functions.php"]
     }
 }
