Switched to PSR-11, and autowiring based on class names.

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
     "autoload": {
         "psr-0": {"P\\": "source/"},
         "files": ["source/P/functions.php"]
+    },
+    "require": {
+        "psr/container": "^1.0"
     }
 }
