--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "pframework/p",
     "description": "A Small Application Framework",
-    "license": "UNLICENSE",
+    "license": "MIT",
     "authors": [
         {
-            "name": "Ralph Schindler",
-            "email": "ralph@ralphschindler.com",
+            "name": "Chris Tankersley",
+            "email": "chris@ctankersley.com",
+            "homepage": "http://ctankersley.com",
             "role": "developer"
         }
     ],
@@ -15,5 +16,8 @@
     },
     "require": {
         "psr/container": "^1.0"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.11.4"
     }
 }
